# TaskServer

./: pyproject.toml
taskserver/: celery_app.py  main.py
taskserver/apps/: router.py
taskserver/apps/task/: views.py
taskserver/config/: celery_config.py
taskserver/core/: tasks.py
tests/: test_taskserver.py
