[tool.poetry]
name = "TaskServer"
version = "0.1.0"
description = ""
authors = ["leipeng <leipeng@haocang.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
redis = "^3.5.3"
celery = "^5.0.0"
uvicorn = "^0.11.8"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
